Requirements section addition & styling changes

--- a/index.html
+++ b/index.html
@@ -19,30 +19,34 @@
                     <a href="#info">Features</a>
                 </li>
                 <li>
-                    <a href="#">Requirements</a>
+                    <a href="#requirements">Requirements</a>
                 </li>
                 <li>
-                    <a href="#">User Guide</a>
+                    <a href="https://github.com/Arnethegreat/yoshisisland-practice-hack" target="_blank">User Guide</a>
                 </li>
             </ul>
         </nav>
         <div class="header-main">
-            <img src="../images/header-yoshi.png" class="header-img">
+            <img src="../images/header-yoshi.png" alt="A cute blue yoshi" class="header-img">
             <h1>Yoshi's Island</h1>
             <h2>Practice Hack</h2>
             <a href="#" class="btn btn-blue">Download</a>
-            <a href="#" class="btn btn-white">More Info</a>
+            <a href="#info" class="btn btn-white">More Info</a>
         </div>
     </header>
     <section id="info" class="info">
+      <div class="info__header">
         <h2>Your path to a new personal best.</h2>
-        <p>Fully console compatible, this practice hack equips you with tools for optimal and efficient practice.</p>
+        <hr>
+        <p>Fully console compatible, the practice hack is a ROM of the vanilla version of Yoshi's Island that is modified to include useful tools for learning how to speedrun the game.</p>
+      </div>
         <div class="features">
             <img src="../images/features-ui.png" class="ui-img">
-            <ul>
+              <ul>
+                <li>Features:</li>
                 <li><img src="../images/egg-green.png"> Savestates</li>
                 <li><img src="../images/egg-yellow.png"> Egg Editor</li>
-                <li><img src="../images/egg-red.png"> Boss Practice</li>
+                <li><img src="../images/egg-red.png"> Warp To Boss</li>
                 <li><img src="../images/egg-green.png"> Disable Music</li>
                 <li><img src="../images/egg-yellow.png"> Quick Stage Intro</li>
                 <li><img src="../images/egg-red.png"> Complete Save File</li>
@@ -50,6 +54,12 @@
             </ul>
         </div>
     </section>
+    <section id="requirements" class="requirements">
+
+    </section>
+    <footer>
+
+    </footer>
     <script src="../js/script.js"></script>
 </body>
 </html>
